--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "deploy": "strapi deploy",
     "dev": "strapi develop",
     "develop": "strapi develop",
-    "seed:example": "node ./scripts/seed.js",
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "gen:api": "npm run strapi openapi generate -- --output ./public/openapi.json"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.30.1",
     "@strapi/plugin-users-permissions": "5.30.1",
     "@strapi/strapi": "5.30.1",
     "better-sqlite3": "11.3.0",
-    "fs-extra": "^10.0.0",
-    "mime-types": "^2.1.27",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
@@ -38,7 +36,7 @@
     "npm": ">=6.0.0"
   },
   "strapi": {
-    "uuid": "8706b154-e676-4032-94c6-ef109d526177",
-    "installId": "280b25240f405f31bc05f63099eeb95d8c7081b40788b5c03c56d778f2e9a6c3"
+    "uuid": "c2f115ee-743d-4f08-8796-c4757f535ef9",
+    "installId": "c5774136dab6bf29514616542c4f5aaeb5fe48f61bfe736569d0f13225e21d6c"
   }
 }
